@@ -268,6 +268,7 @@ int main(int argc, char *argv[])
   int * coreids;
   int * datastreamids;
   bool monitor = false;
+  bool vgoscomplexvdifhack = false;
   string monitoropt;
   pthread_t commandthread;
   //pthread_attr_t attr;
@@ -293,7 +294,7 @@ int main(int argc, char *argv[])
 
   if(argc < 2 || argc > 4)
   {
-    cerr << "Error: invoke with mpifxcorr <inputfilename> [-M<monhostname>:port[:monitor_skip]] [-rNewStartSec]" << endl;
+    cerr << "Error: invoke with mpifxcorr <inputfilename> [-M<monhostname>:port[:monitor_skip]] [-rNewStartSec] [--vgoscomplex]" << endl;
     MPI_Barrier(world);
     MPI_Finalize();
     return EXIT_FAILURE;
@@ -338,9 +339,14 @@ int main(int argc, char *argv[])
     {
       restartseconds = atof(argv[i] + 2);
     }
+    else if(strcmp(argv[i], "--vgoscomplex") == 0)
+    {
+      cwarn << startl << "Enabling VGOS hack; raw samples of *all* VDIFC stations will have the sign of the imaginary part reversed i.e. the sideband inverted during unpacking!" << endl;
+      vgoscomplexvdifhack = true;
+    }
     else
     {
-      cfatal << startl << "Invoke with mpifxcorr <inputfilename> [-M<monhostname>:port[:monitor_skip]]" << endl;
+      cfatal << startl << "Invoke with mpifxcorr <inputfilename> [-M<monhostname>:port[:monitor_skip]] [--vgoscomplex]" << endl;
       MPI_Barrier(world);
       MPI_Finalize();
       return EXIT_FAILURE;
@@ -359,6 +365,7 @@ int main(int argc, char *argv[])
     MPI_Abort(MPI_COMM_WORLD, 1);
     return EXIT_FAILURE;
   }
+  config->setVGOSComplexVDIFHack(vgoscomplexvdifhack); // hopefully a temporary hack to bridge the time until VGOS fixes R(2)DBE firmware
 
   //handle difxmessage setup for sending and receiving
   if (isDifxMessageInUse()) { 
