@@ -21,6 +21,7 @@ Version 2.6
 * Fix native mk5 issue where buffer locks would be ignored on a long-ish timeout that can happen on start-up.
   (backport from trunk)
 * Fix bug affecting data weights when nBufferedFFTs > 1 and datastreams weight < 1 (backport from trunk)
+* Add flag 'mpifxcorr <job.input> --vgoscomplex' that flips the sideband of all VDIFC recordings during playback, esp. Mark6 native playback
 
 Version 2.5
 ~~~~~~~~~~~
